mollieライブラリ導入

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "mollie/laravel-mollie": "^2.25",
         "razorpay/razorpay": "2.*",
         "srmklive/paypal": "~3.0"
     },
